@@ -11,13 +11,13 @@ import org.elasticsearch.action.fieldcaps.FieldCapabilities;
 import org.elasticsearch.action.fieldcaps.FieldCapabilitiesResponse;
 import org.elasticsearch.action.index.IndexRequest;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.collect.MapBuilder;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
+import static java.util.Map.entry;
 import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasEntry;
@@ -30,30 +30,24 @@ public class DocumentConversionUtilsTests extends ESTestCase {
     private static final String INDEX = "some-index";
     private static final String PIPELINE = "some-pipeline";
     private static final String ID = "some-id";
-    private static final Map<String, Object> DOCUMENT = Collections.unmodifiableMap(
-        MapBuilder.<String, Object>newMapBuilder()
-            .put("field-1", "field-1-value")
-            .put("field-2", "field-2-value")
-            .put("field-3", "field-3-value")
-            .put("_internal-field-1", "internal-field-1-value")
-            .put("_internal-field-2", "internal-field-2-value")
-            .map()
+    private static final Map<String, Object> DOCUMENT = Map.ofEntries(
+        entry("field-1", "field-1-value"),
+        entry("field-2", "field-2-value"),
+        entry("field-3", "field-3-value"),
+        entry("_internal-field-1", "internal-field-1-value"),
+        entry("_internal-field-2", "internal-field-2-value")
     );
-    private static final Map<String, Object> DOCUMENT_WITHOUT_ID = Collections.unmodifiableMap(
-        MapBuilder.<String, Object>newMapBuilder()
-            .put("field-1", "field-1-value")
-            .put("field-2", "field-2-value")
-            .put("field-3", "field-3-value")
-            .put("_internal-field-1", "internal-field-1-value")
-            .put("_internal-field-2", "internal-field-2-value")
-            .map()
+    private static final Map<String, Object> DOCUMENT_WITHOUT_ID = Map.ofEntries(
+        entry("field-1", "field-1-value"),
+        entry("field-2", "field-2-value"),
+        entry("field-3", "field-3-value"),
+        entry("_internal-field-1", "internal-field-1-value"),
+        entry("_internal-field-2", "internal-field-2-value")
     );
-    private static final Map<String, Object> DOCUMENT_WITHOUT_INTERNAL_FIELDS = Collections.unmodifiableMap(
-        MapBuilder.<String, Object>newMapBuilder()
-            .put("field-1", "field-1-value")
-            .put("field-2", "field-2-value")
-            .put("field-3", "field-3-value")
-            .map()
+    private static final Map<String, Object> DOCUMENT_WITHOUT_INTERNAL_FIELDS = Map.ofEntries(
+        entry("field-1", "field-1-value"),
+        entry("field-2", "field-2-value"),
+        entry("field-3", "field-3-value")
     );
 
     public void testConvertDocumentToIndexRequest_MissingId() {
